ingress-bkp.yaml
## YouTube Video Source: Application Deployment on AKS | Azure Kubernetes Service; https://www.youtube.com/watch?v=uCh3iym4HZ8
## ELK stack on kubernetes reference
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress
  #namespace: ingress-basic
  annotations:
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /abc
    #multiple
    #/$1
    nginx.ingresskubernetes.io/backend-protocol: "HTTP"
    nginx.ingresskubernetes.io/affnity: cookie
    nginx.ingresskubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingresskubernetes.io/proxy-read-timeout: "3600"
    nginx.ingresskubernetes.io/proxy-send-timeout: "3600"
    nginx.ingresskubernetes.io/proxy-body-size: "200m"
    nginx.ingresskubernetes.io/proxy-read-timeout: "300s"
    nginx.ingresskubernetes.io/proxy-send-timeout: "300s"

spec:
  ingressClassName: nginx
  rules:
  - host: javademo.20.207.106.12.nip.io
    http:
      paths:
      - path: /
        #(/|$)(.*)
      #?(.*)
        pathType: Prefix
        backend:
          service:
            name: shopfront
            port:
              number: 8010
  - host: javademo1.20.207.106.12.nip.io
    http:
      paths:
      - path: /products
        #(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: productcatalogue
            port:
              number: 8020
  - host: javademo2.20.207.106.12.nip.io
    http:
      paths: 
      - path: /stocks
        #/?(.*)
        pathType: Prefix
        backend:
          service:
            name: stockmanager
            port:
              number: 8030 

      #- path: /products
        #(/|$)(.*)
        #pathType: Prefix
        #backend:
          #service:
            #name: productcatalogue
            #port:
              #number: 8020
      #- path: /stocks
        #/?(.*)
        #pathType: Prefix
        #backend:
          #service:
            #name: stockmanager
            #port:
              #number: 8030
